# rusty-spacetraders

./: .gitignore  Cargo.toml  README.md  registered_agent.txt
.github/workflows/: rust-ci.yml
rusty_spacetraders/src/: gameflow.rs  main.rs  tradersapi.rs  utilities.rs
src/: api.rs  cli.rs  commands.rs  handler.rs  main.rs  playeragent.rs  utilities.rs
src/api/: api.rs  requests.rs
src/utils/: helpers.rs  mod.rs  request.rs  status.rs
